--- a/index.html
+++ b/index.html
@@ -402,6 +402,10 @@ summary {
 <li><a href="https://peon-pasado.github.io/training/clases/clase1.html">clase 1</a></li>
 </ul>
 <p>Examen de entrada y elección del ritmo de entrenamiento.</p>
+<ul>
+<li><a href="https://peon-pasado.github.io/training/clases/clase2.html">clase 2</a></li>
+</ul>
+<p>Explicación de los problemas en el examen de entrada.</p>
 </div>
 
 
