--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@ summary {
 <li><a href="https://peon-pasado.github.io/training/clases/clase2.html">clase 2</a></li>
 </ul>
 <p>Explicación de los problemas en el examen de entrada.</p>
+<p><a href="https://drive.google.com/file/d/1zbyPypR4rXvYjvtAVgHqEy6QPjqxZxh9/view?usp=sharing">video</a></p>
 </div>
 
 
