--- a/index.html
+++ b/index.html
@@ -407,6 +407,10 @@ summary {
 </ul>
 <p>Explicación de los problemas en el examen de entrada.</p>
 <p><a href="https://drive.google.com/file/d/1zbyPypR4rXvYjvtAVgHqEy6QPjqxZxh9/view?usp=sharing">video</a></p>
+<ul>
+<li><a href="https://peon-pasado.github.io/training/clases/clase3.html">clase 3</a></li>
+</ul>
+<p>Introducción a los algoritmos greedy.</p>
 </div>
 
 
