--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@ summary {
 <li><a href="https://peon-pasado.github.io/training/clases/clase3.html">clase 3</a></li>
 </ul>
 <p>Introducción a los algoritmos greedy.</p>
+<p><a href="https://drive.google.com/file/d/1yN2glI_5SR365eNFvQ7U7g8e2RO6RCOw/view?usp=sharing">video 1</a></p>
+<p><a href="https://drive.google.com/file/d/1N9UTtDVA-SiBpfTP0nedXJVrYzT3yELc/view?usp=sharing">video 2</a></p>
 </div>
 
 
