--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@ summary {
 <li><a href="https://peon-pasado.github.io/training/clases/clase3.html">clase 5</a></li>
 </ul>
 <p>Más problemas de la clase 3 y explicación de problemas.</p>
+<p><a href="https://drive.google.com/file/d/1tPGDHgcY9OeC_DzYCCqVi_yZI7hST_4P/view?usp=sharing">video1</a></p>
 </div>
 
 
