--- a/clases/semana-1.html
+++ b/clases/semana-1.html
@@ -191,7 +191,7 @@ pre code {
 <div id="introducción-a-la-programación-competitiva." class="section level2">
 <h2>Introducción a la Programación Competitiva.</h2>
 <ol style="list-style-type: decimal">
-<li><p><a href="https://www.youtube.com/watch?v=6x2wYlLdIJk">Progrmación Competitiva - UNR</a></p></li>
+<li><p><a href="https://www.youtube.com/watch?v=6x2wYlLdIJk">Programación Competitiva - UNR</a></p></li>
 <li><p><a href="https://www.youtube.com/watch?v=oLxTgpPw9os">Premiación 2019 - Final Mundial</a></p></li>
 </ol>
 </div>
