--- a/clases/semana-7.html
+++ b/clases/semana-7.html
@@ -503,17 +503,18 @@ using namespace std;
 
 int main() {
   int n, m;
-  char mat[n][m];
+  cin &gt;&gt; n &gt;&gt; m;
+  char arr[n][m];
   for (int i = 0; i &lt; n; ++i) {
     for (int j = 0; j &lt; m; ++j) {
-      cin &gt;&gt; mat[i][j];
+      cin &gt;&gt; arr[i][j];
     }
   }
   for (int i = 0; i &lt; n; ++i) {
     for (int j = 0; j &lt; m - j - 1; ++j) {
-      int temp = arr[i][j];
+      char temp = arr[i][j];
       arr[i][j] = arr[i][m-j-1];
-      arr[i][j] = temp;
+      arr[i][m-j-1] = temp;
     }
   }
   for (int i = 0; i &lt; n; ++i) {
